--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 
 #主数据源
-first.spring.datasource.url = jdbc:mysql://11.4.74.51:800/booking?useUnicode=true&characterEncoding=utf-8&useSSL=false
+first.spring.datasource.url = jdbc:mysql://172.16.4.187:3306/microservice?useUnicode=true&characterEncoding=utf-8&useSSL=false
 first.spring.datasource.username = root
-first.spring.datasource.password =wuzuquan
+first.spring.datasource.password =password
 first.spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 first.spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
@@ -41,46 +41,20 @@ first.spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat
 
 
 #第二数据源
-framedb.spring.datasource.url = jdbc:oracle:thin:@192.168.84.235:1521:x64devdb
-framedb.spring.datasource.username = itfw_app
-framedb.spring.datasource.password = itiu0pk
-framedb.spring.datasource.driver-class-name = oracle.jdbc.OracleDriver
-framedb.spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#second.spring.datasource.url = jdbc:oracle:thin:@192.168.84.235:1521:x64devdb
+#second.spring.datasource.username = itfw_app
+#second.spring.datasource.password = itiu0pk
+#second.spring.datasource.driver-class-name = oracle.jdbc.OracleDriver
+#second.spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
-# 下面为连接池的补充设置，应用到上面所有数据源中
-# 初始化大小，最小，最大
-framedb.spring.datasource.initialSize=5
-#最小空闲连接数
-framedb.spring.datasource.minIdle=10
-framedb.spring.datasource.maxActive=50
-# 等待超时的时间，单位毫秒
-framedb.spring.datasource.maxWait=20000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-framedb.spring.datasource.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
-framedb.spring.datasource.minEvictableIdleTimeMillis=300000
-#检查连接是否有效，申请连接的时候检查空闲连接
-framedb.spring.datasource.validationQuery=SELECT 1 FROM DUAL
-framedb.spring.datasource.testWhileIdle=true
-framedb.spring.datasource.testOnBorrow=false
-framedb.spring.datasource.testOnReturn=false
-# 打开PSCache，并且指定每个连接上PSCache的大小
-framedb.spring.datasource.poolPreparedStatements=true
-framedb.spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-#framedb.spring.datasource.filters=stat,wall,log4j
-# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-#framedb.spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-# 合并多个DruidDataSource的监控数据
-#spring.datasource.useGlobalDataSourceStat=true
 
 #redis客户端redisson配置
-spring.redisson.nodeAddresses[0]=redis://11.4.74.45:6000
-spring.redisson.nodeAddresses[1]=redis://11.4.74.47:6000
-spring.redisson.nodeAddresses[2]=redis://11.4.74.44:6000
-spring.redisson.nodeAddresses[3]=redis://11.4.74.48:6000
-spring.redisson.nodeAddresses[4]=redis://11.4.74.49:6000
-spring.redisson.nodeAddresses[5]=redis://11.4.74.50:6000
+spring.redisson.nodeAddresses[0]=redis://172.16.4.187:6000
+spring.redisson.nodeAddresses[1]=redis://172.16.4.187:6001
+spring.redisson.nodeAddresses[2]=redis://172.16.4.187:6002
+spring.redisson.nodeAddresses[3]=redis://172.16.4.187:6003
+spring.redisson.nodeAddresses[4]=redis://172.16.4.187:6004
+spring.redisson.nodeAddresses[5]=redis://172.16.4.187:6005
 #redis集群密码，默认为空
 #spring.redisson.password=123
 spring.redisson.readMode=MASTER_SLAVE
@@ -94,7 +68,7 @@ spring.redisson.maxConnectionSize=300
 
 #rocketmq配置
 #spring.rocketmq.producer.nameServer=10.42.242.189:9876
-spring.rocketmq.producer.nameServer=11.4.74.45:9876;11.4.74.48:9876
+spring.rocketmq.producer.nameServer=172.16.4.187:9876
 #各自设置生产者组
 spring.rocketmq.producer.group=my-group
 spring.rocketmq.producer.instanceName=microservice
