--- a/restapi/src/main/resources/application.properties
+++ b/restapi/src/main/resources/application.properties
@@ -52,11 +52,11 @@ management.security.enabled=false
 
 spring.cloud.consul.host=11.4.74.48
 spring.cloud.consul.port=800
-#spring.cloud.consul.discovery.service-name=${spring.application.name}
 spring.cloud.consul.discovery.prefer-ip-address=true
 spring.cloud.consul.discovery.healthCheckPath=/metrics/health
 spring.cloud.consul.discovery.fail-fast=false
-
+spring.cloud.consul.discovery.enabled=false
+spring.cloud.consul.discovery.register=false
 spring.cloud.consul.discovery.tags=service
 spring.cloud.consul.discovery.instance-id= ${spring.application.name}:${spring.cloud.client.ipAddress}
 
